--- a/style.css
+++ b/style.css
@@ -1,21 +1,31 @@
+:root{
+    --root-color:rgb(165, 173, 180);
+}
 body {
     margin:40px auto;
     max-width:650px;
     line-height:1.6; 
     /* font-size:20px; */
-    color:#444444;
     padding:0 10px;
     text-align:center;
-    background-color:#fdf6e3;
+    background-color:rgb(51, 51, 51); 
+    color: var(--root-color);
+    /* background-color:#fdf6e3; */
+    /* color:#444444; */
 }
 
 a:link, a:visited, a:active {
-    color:#444;
+    /* color:#444; */
+    /* color:rgb(137, 143, 148); */
+    color:var(--root-clr);
     text-decoration: none;
 }
 
 a:hover {
-    text-decoration:underline;
+    /* text-decoration:underline; */
+    color:#f10cad;
+    /* background-color: #fcbb08da; */
+    /* box-shadow:0px 0px 1px #f10cad;  */
 }
 
 .main-links {
@@ -24,4 +34,8 @@ a:hover {
 
 .other-links {
     font-size:14px;
+}
+
+.solutions {
+    text-align:left;
 }
